syntax ="proto3";
import "google/protobuf/descriptor.proto";

option go_package="github.com/iansmith/parigot/api/parigot;parigot";

package parigot;
extend google.protobuf.ServiceOptions {
  optional bool pull_parameters_up = 543212;
  optional bool no_package = 543211;
  optional string wasm_service_name = 543210;
}
extend google.protobuf.MethodOptions {
  optional string wasm_method_name = 543210;
}
extend google.protobuf.FieldOptions {
  optional string wasm_field_name = 543210;
}

extend google.protobuf.FileOptions {
  optional bool abi = 543210;
}
extend google.protobuf.MessageOptions {
  optional string wasm_message_name = 543210;
}
